# AnD.platform

./: .env.example  .gitignore  LICENSE  PLAN.md  QUICKSTART.md  README.md  TODO.md  alembic.ini  config.yaml  docker-compose.yml  generator.py  init-db.sql  main.py  manage.py  pyproject.toml  requirements.txt  run_submission_server.py  run_tick_manager.py  setup-db.sh  start_system.sh  team_credentials.txt
.github/: copilot-instructions.md
.github/instructions/: code-style.instructions.md
_frontend_prototype/: package.json
alembic/: env.py
alembic/versions/: 50a4450fc30f_add_ssh_credentials_to_game_teams.py  8e7dc35e9ea7_add_vulnboxes_and_checkers_tables.py  b1c18323c759_initial_migration.py
docs/: RUNNING.md  SETUP.md
gameserver/: __init__.py  urls.py
gameserver/checker/: __init__.py  base_checker.py  flag_injector.py
infrastructure/: README.md  deploy_teams.py  docker-compose.yml  quick_deploy.sh  setup_database.py
lib/: compiler.py  evasion.py  forensics_evasion.py  obfuscator.py  packer.py  persistence.py  template_engine.py
migrations/: add_game_vulnboxes.sql  add_pause_tracking.sql  add_tick_started_at.sql  fix_flag_submissions_cascade.sql
output/: .gitkeep
snippets/: amsi_bypass.go  etw_bypass.go  persistence_com_hijack.go  persistence_registry.go  persistence_schtasks.go  persistence_wmi.go  sandbox_detect.go
src/api/: __init__.py  (+2 more)
templates/: implant_go_basic.go  implant_go_syscalls.go
tests/: test_compiler.py  test_evasion.py  test_obfuscator.py  test_packer.py  test_persistence.py  test_template_engine.py
uploads/: __init__.py
(+94 files in other folders)
